--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
   border: 2px solid #45b7af;
 }
 
+.btn-primary {
+  background: linear-gradient(135deg, #ff6b6b, #ff8e8e);
+  color: white;
+  border: 2px solid #ff5252;
+}
+
 /* 悬停效果 */
 .btn-primary:hover {
   transform: translateY(-2px);
@@ -56,6 +62,11 @@
 </style>
 </head>
 <body>
+    
+    <h1 align="center">您好</h1>
+        <h1>
+            
+        <h1 align="center">欢迎您访问我的主页</h1><br>
 
 <div class="btn-container">
   <!-- 按钮1 -->
@@ -66,6 +77,10 @@
   <!-- 按钮2 -->
   <a href="https://afdian.com/a/chentongs" class="custom-btn btn-secondary">
     打开<u>敬业的陈C</u>的爱发电
+  </a>
+
+  <a href="https://space.bilibili.com/175533035?spm_id_from=333.1387.fans.user_card.click" class="custom-btn btn-secondary">
+    <u>友情链接</u>
   </a>
 </div>
 
